--- a/B2B_App/App.xaml
+++ b/B2B_App/App.xaml
@@ -2,7 +2,8 @@
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:common="using:Template10.Common"
-                     RequestedTheme="Light">
+                     RequestedTheme="Light"
+                     xmlns:local="using:B2B_App">
 
     <Application.Resources>
         <ResourceDictionary Source="Styles\Custom.xaml" />
